fix spacing of footer logo and icons to match figma

--- a/styles.css
+++ b/styles.css
@@ -620,7 +620,7 @@ footer {
   margin: 65px;
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
